style: fix .page wrapping bug caused by wide custom sidebar

--- a/_sass/custom/_refinements.scss
+++ b/_sass/custom/_refinements.scss
@@ -86,16 +86,28 @@ html[data-theme="dark"] .active-category {
   .sidebar {
     width: 250px !important; // Slightly wider to prevent category names from clipping
   }
+  .layout--single .page {
+    width: calc(100% - 250px) !important;
+  }
   .layout--home .sidebar {
     width: 220px !important; // Keep home sidebar original width
+  }
+  .layout--home .page {
+    width: calc(100% - 220px) !important;
   }
 }
 @media screen and (min-width: 1280px) {
   .sidebar {
     width: 280px !important;
   }
+  .layout--single .page {
+    width: calc(100% - 280px) !important;
+  }
   .layout--home .sidebar {
     width: 240px !important;
+  }
+  .layout--home .page {
+    width: calc(100% - 240px) !important;
   }
 }
 
